--- a/GIS Projekt/GIS Projekt.vcxproj.filters
+++ b/GIS Projekt/GIS Projekt.vcxproj.filters
@@ -25,7 +25,10 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Edge.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PolishLetters.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
