--- a/GIS Projekt/GIS Projekt.vcxproj
+++ b/GIS Projekt/GIS Projekt.vcxproj
@@ -143,11 +143,13 @@
   <ItemGroup>
     <ClInclude Include="Edge.h" />
     <ClInclude Include="PolishLetters.h" />
+    <ClInclude Include="PrimAlgorithm.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GIS Projekt.cpp" />
+    <ClCompile Include="PrimAlgorithm.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
